--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono',
-      'Droid Sans Mono',
-      'Courier New',
-      monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+      "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+      "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
 
 * {
@@ -14,9 +11,12 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
-    list-style-type: none;
-}
+  list-style-type: none;
 
+}
+a {
+  color: black;
+}
 html,
 body {
   max-width: 100vw;
