--- a/components/navbar/styles.module.css
+++ b/components/navbar/styles.module.css
@@ -7,12 +7,10 @@
   font-weight: bold;
   font-size: large;
 }
-.navbarContainer div:hover {
-  border-bottom: 2px solid orangered;
-}
-.navbarContainer div a {
+.navbarContainer a {
   transition: all 0.2s;
 }
-.navbarContainer div a:hover {
+.navbarContainer a:hover {
   color: orangered;
+  border-bottom: 2px solid orangered;
 }/*# sourceMappingURL=styles.module.css.map */
