--- a/components/header/styles.module.css
+++ b/components/header/styles.module.css
@@ -11,7 +11,24 @@
 .headerContainer h2 a {
   color: #FF9920;
 }
+.headerContainer div {
+  display: flex;
+  align-items: center;
+}
+.headerContainer div .basketBtn a {
+  display: flex;
+}
+.headerContainer div .basketBtn a sup {
+  font-size: large;
+  border: 1px solid gray;
+  border-radius: 50%;
+  padding: 2px 5px;
+  color: black;
+  background-color: white;
+}
 .headerContainer div button {
+  color: white;
+  height: 40px;
   cursor: pointer;
   background-color: #ae445a;
   padding: 10px;
@@ -25,4 +42,17 @@
 }
 .headerContainer div button:hover {
   background-color: #FF9920;
+}
+
+@media (max-width: 530px) {
+  .headerContainer h2 a {
+    font-weight: 600;
+  }
+  .headerContainer div span {
+    display: none;
+  }
+  .headerContainer div button {
+    padding: 5px 10px;
+    margin: 0px 3px 0px 0px;
+  }
 }/*# sourceMappingURL=styles.module.css.map */
