--- a/components/shop-list/styles.module.css
+++ b/components/shop-list/styles.module.css
@@ -1,5 +1,5 @@
 .shopListContainer {
-  width: 90%;
+  width: 100%;
   margin: 5vh auto;
   display: flex;
   align-items: center;
@@ -9,8 +9,8 @@
 }
 .shopListContainer .ShopListBox {
   padding: 8px;
-  width: 20%;
-  height: 400px;
+  width: 22%;
+  height: 450px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 20px;
   display: flex;
@@ -24,7 +24,7 @@
 }
 .shopListContainer .ShopListBox img {
   width: 100%;
-  height: 250px;
+  height: 300px;
 }
 .shopListContainer .ShopListBox button {
   width: 90%;
@@ -39,4 +39,25 @@
 .shopListContainer .ShopListBox button:hover {
   outline: none;
   background: linear-gradient(90deg, #fde577, #e01b24);
+}
+
+@media (max-width: 1010px) {
+  .shopListContainer .ShopListBox {
+    width: 25%;
+  }
+}
+@media (max-width: 880px) {
+  .shopListContainer .ShopListBox {
+    width: 35%;
+  }
+}
+@media (max-width: 650px) {
+  .shopListContainer .ShopListBox {
+    width: 45%;
+  }
+}
+@media (max-width: 500px) {
+  .shopListContainer .ShopListBox {
+    width: 60%;
+  }
 }/*# sourceMappingURL=styles.module.css.map */
