--- a/components/shop-list/styles.module.scss
+++ b/components/shop-list/styles.module.scss
@@ -1,5 +1,5 @@
 .shopListContainer {
-    width: 90%;
+    width: 100%;
     margin: 5vh auto;
     display: flex;
     align-items: center;
@@ -14,14 +14,14 @@
 
         img {
             width: 100%;
-            height: 250px;
+            height: 300px;
 
         }
 
 
         padding: 8px;
-        width: 20%;
-        height: 400px;
+ width: 22%;
+ height: 450px;
 
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
@@ -58,13 +58,38 @@
             }
         }
 
+}
+}
 
-
-
-
+@media (max-width:1010px) {
+    .shopListContainer {
+        .ShopListBox {
+            width: 25%;
+        }
     }
+}
+
+@media (max-width:880px) {
+    .shopListContainer {
+        .ShopListBox {
+            width: 35%;
+        }
+    }
+}
 
 
+@media (max-width:650px) {
+    .shopListContainer {
+        .ShopListBox {
+            width: 45%;
+        }
+    }
+}
 
-
+@media (max-width:500px) {
+    .shopListContainer {
+        .ShopListBox {
+            width: 60%;
+        }
+    }
 }
