--- a/components/basket/styles.module.css
+++ b/components/basket/styles.module.css
@@ -1,9 +1,9 @@
 .basketContainer {
-  width: 90%;
+  width: 70%;
   margin: 5vh auto;
 }
 .basketContainer .basketBox {
-  width: 80%;
+  width: 70%;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -17,9 +17,59 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
+  gap: 20px;
 }
 .basketContainer .basketBox .basketInfo img {
-  width: 30%;
-  height: 200px;
+  width: 22%;
+  height: 150px;
+}
+
+@media (max-width: 800px) {
+  .basketContainer {
+    width: 80%;
+  }
+  .basketContainer .basketBox {
+    width: 90%;
+  }
+  .basketContainer .basketBox .basketInfo {
+    width: 80%;
+  }
+  .basketContainer .basketBox .basketInfo img {
+    width: 20%;
+    height: 100px;
+  }
+}
+@media (max-width: 530px) {
+  .basketContainer {
+    width: 90%;
+    font-weight: 300;
+    font-size: medium;
+  }
+  .basketContainer .basketBox {
+    width: 90%;
+  }
+  .basketContainer .basketBox .basketInfo {
+    width: 80%;
+  }
+  .basketContainer .basketBox .basketInfo img {
+    width: 10%;
+    height: 80px;
+  }
+}
+@media (max-width: 380px) {
+  .basketContainer {
+    width: 95%;
+    font-weight: 200;
+    font-size: small;
+  }
+  .basketContainer .basketBox {
+    width: 95%;
+  }
+  .basketContainer .basketBox .basketInfo {
+    width: 90%;
+  }
+  .basketContainer .basketBox .basketInfo img {
+    width: 8%;
+    height: 50px;
+  }
 }/*# sourceMappingURL=styles.module.css.map */
