--- a/components/basket/styles.module.scss
+++ b/components/basket/styles.module.scss
@@ -1,9 +1,9 @@
 .basketContainer {
-    width: 90%;
+width: 70%;
     margin: 5vh auto;
 
-    .basketBox {
-        width: 80%;
+.basketBox {
+    width: 70%;
         padding: 10px;
         display: flex;
         align-items: center;
@@ -12,17 +12,80 @@
         border: 1px solid gray;
         border-radius: 20px;
 
-        .basketInfo {
+    .basketInfo {
             width: 60%;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            gap: 10px;
-
-            img {
-                width: 30%;
-                height: 200px;
+    gap: 20px;
+    
+        img {
+            width: 22%;
+            height: 150px;
+        }
+    }
+    }
+    }
+    
+    @media (max-width: 800px) {
+        .basketContainer {
+            width: 80%;
+    
+            .basketBox {
+                width: 90%;
+    
+                .basketInfo {
+                    width: 80%;
+    
+                    img {
+                        width: 20%;
+                        height: 100px;
+                    }
+                }
             }
         }
     }
+    
+    @media (max-width: 530px) {
+        .basketContainer {
+            width: 90%;
+    
+            font-weight: 300;
+            font-size: medium;
+    
+            .basketBox {
+                width: 90%;
+    
+                .basketInfo {
+                    width: 80%;
+    
+                    img {
+                        width: 10%;
+                        height: 80px;
+                    }
+                }
+            }
+        }
+    }
+    
+    @media (max-width: 380px) {
+        .basketContainer {
+            width: 95%;
+    
+            font-weight: 200;
+            font-size: small;
+    
+            .basketBox {
+                width: 95%;
+    
+                .basketInfo {
+                    width: 90%;
+
+        img {
+        width: 8%;
+            height: 50px;
+        }
+        }
+        }
+                                }
 }
