--- a/components/shop-list/styles.module.scss
+++ b/components/shop-list/styles.module.scss
@@ -10,13 +10,13 @@
 
 
     .ShopListBox {
-
-
+a {
         img {
             width: 100%;
             height: 300px;
 
         }
+}
 
 
         padding: 8px;
