--- a/components/singin/styles.module.scss
+++ b/components/singin/styles.module.scss
@@ -54,3 +54,39 @@
         }
     }
 }
+@media (max-width:1000px) {
+
+    .singInContainer {
+        width: 50%;
+
+        div {}
+    }
+}
+
+
+@media (max-width:800px) {
+
+    .singInContainer {
+        width: 70%;
+
+        div {}
+    }
+}
+
+@media (max-width:600px) {
+
+    .singInContainer {
+        width: 85%;
+
+        div {}
+    }
+}
+
+@media (max-width:380px) {
+
+    .singInContainer {
+        width: 95%;
+
+        div {}
+    }
+}
